--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg main-nav fixed-top navbar-light">
-      <a class="navbar-brand" href="index.html"
+      <a class="navbar-brand" href="index"
         ><img
           class="navbar-logo"
           src="resources/imgs/logo_alt.png"
@@ -57,18 +57,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item px-2">
-            <a class="nav-link" href="cargo-services.html">Cargo Services</a>
+            <a class="nav-link" href="cargo-services">Cargo Services</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link" href="rac90-planes.html">RAC90</a>
+            <a class="nav-link" href="rac90">RAC90</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link" href="special-missions.html"
-              >Special Missions</a
-            >
+            <a class="nav-link" href="special-missions">Special Missions</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about">About</a>
           </li>
           <li class="nav-item px-2">
             <a
@@ -293,20 +291,20 @@
             <div class="row justify-content-between">
               <div class="col-lg-6">
                 <ul class="footer-nav">
-                  <li><a href="/index.html">Home</a></li>
-                  <li><a href="/about.html">About</a></li>
-                  <li><a href="/contact.html">Contact</a></li>
-                  <li><a href="/privacy-policy.html">Privacy Policy</a></li>
-                  <li><a href="/careers.html">Careers</a></li>
+                  <li><a href="/index">Home</a></li>
+                  <li><a href="/about">About</a></li>
+                  <li><a href="/contact">Contact</a></li>
+                  <li><a href="/privacy-policy">Privacy Policy</a></li>
+                  <li><a href="/careers">Careers</a></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul class="footer-nav">
-                  <li><a href="/cargo-services.html">Cargo Services</a></li>
-                  <li><a href="/rac90-planes.html">RAC90</a></li>
-                  <li><a href="/special-missions.html">Special Missions</a></li>
-                  <li><a href="/construction.html">FAQs</a></li>
-                  <li><a href="/construction.html">Blog</a></li>
+                  <li><a href="/cargo-services">Cargo Services</a></li>
+                  <li><a href="/rac90-planes">RAC90</a></li>
+                  <li><a href="/special-missions">Special Missions</a></li>
+                  <li><a href="/construction">FAQs</a></li>
+                  <li><a href="/construction">Blog</a></li>
                 </ul>
               </div>
             </div>
