--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg main-nav fixed-top navbar-light">
 
-        <a class="navbar-brand" href="index.html"><img class="navbar-logo" src="resources/imgs/logo_alt.png"
+        <a class="navbar-brand" href="/"><img class="navbar-logo" src="resources/imgs/logo_alt.png"
                 alt="Resource Air Charter Logo"></a>
         <ul class="navbar-nav mr-auto">
 
@@ -41,16 +41,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="cargo-services.html">Cargo Services</a>
+                    <a class="nav-link" href="cargo-services">Cargo Services</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="rac90-planes.html">RAC90</a>
+                    <a class="nav-link" href="rac90">RAC90</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="special-missions.html">Special Missions</a>
+                    <a class="nav-link" href="special-missions">Special Missions</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="about">About</a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="text-white nav-link btn btn-primary" href="tel:1-615-278-9450">Call Now</a>
@@ -67,7 +67,7 @@
                 <p class="text-white lead">We help businesses avoid downtime and save millions of dollars with exclusive rapid response
                     air charter services.</p>
                 <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
-                <a href="/cargo-services.html" class="btn btn-outline-primary">Learn More</a>
+                <a href="/cargo-services" class="btn btn-outline-primary">Learn More</a>
             </div>
         </div>
     </section>
@@ -169,7 +169,7 @@
                     <h3 class="sub-head">Call us 24/7 to speak with our mission control located in Smyrna, TN</h3>
                     <div class="py-4 text-center">
                         <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
-                        <a href="/contact.html" class="btn btn-outline-primary">Learn More</a>
+                        <a href="/contact" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
                 <div class="col-lg-5 text-center">
@@ -341,20 +341,20 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-6">
                             <ul class="footer-nav">
-                                <li><a href="/index.html">Home</a></li>
-                                <li><a href="/about.html">About</a></li>
-                                <li><a href="/contact.html">Contact</a></li>
-                                <li><a href="/privacy-policy.html">Privacy Policy</a></li>
-                                <li><a href="/careers.html">Careers</a></li>
+                                <li><a href="/index">Home</a></li>
+                                <li><a href="/about">About</a></li>
+                                <li><a href="/contact">Contact</a></li>
+                                <li><a href="/privacy-policy">Privacy Policy</a></li>
+                                <li><a href="/careers">Careers</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-6">
                             <ul class="footer-nav">
-                                <li><a href="/cargo-services.html">Cargo Services</a></li>
-                                <li><a href="/rac90-planes.html">RAC90</a></li>
-                                <li><a href="/special-missions.html">Special Missions</a></li>
-                                <li><a href="/construction.html">FAQs</a></li>
-                                <li><a href="/construction.html">Blog</a></li>
+                                <li><a href="/cargo-services">Cargo Services</a></li>
+                                <li><a href="/rac90">RAC90</a></li>
+                                <li><a href="/special-missions">Special Missions</a></li>
+                                <li><a href="/construction">FAQs</a></li>
+                                <li><a href="/construction">Blog</a></li>
                             </ul>
                         </div>
                     </div>
