contact form update

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg main-nav fixed-top navbar-light">
-      <a class="navbar-brand" href="index"
+      <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
           src="resources/imgs/logo_alt.png"
@@ -38,7 +38,9 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="tel:1-615-278-9450">(615) 278-9450</a>
+          <a class="nav-link" href="tel:1-615-278-9450"
+            ><strong>(615) 278-9450</strong></a
+          >
         </li>
       </ul>
 
@@ -67,6 +69,9 @@
           </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="about">About</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item px-2">
             <a
