--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg main-nav fixed-top navbar-light">
-      <a class="navbar-brand" href="index"
+      <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
           src="resources/imgs/logo_alt.png"
@@ -38,7 +38,9 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="tel:1-615-278-9450">(615) 278-9450</a>
+          <a class="nav-link" href="tel:1-615-278-9450"
+            ><strong>(615) 278-9450</strong></a
+          >
         </li>
       </ul>
 
@@ -67,6 +69,9 @@
           </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="about">About</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item px-2">
             <a
@@ -182,76 +187,91 @@
 
     <section class="section-contact my-5 pb-5">
       <div class="container">
-        <h2>Contact Us</h2>
+        <h2>How Can We Help?</h2>
         <div class="row">
-          <div class="col-md-6">
-            <form action="" class="border rounded p-4">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <label for="name">Name</label>
-                    <input
-                      type="text"
-                      name="name"
-                      id="name"
-                      placeholder="Your name"
-                      class="form-control mt-2"
-                      required
-                    />
+          <div class="col-lg-6">
+            <form
+              id="contact-form"
+              method="POST"
+              action="contact.php"
+              role="form"
+              class="border rounded p-4"
+            >
+              <div class="messages"></div>
+              <div class="controls">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="form-group">
+                      <label for="contact_name">Name</label>
+                      <input
+                        type="text"
+                        name="name"
+                        id="contact_name"
+                        placeholder="Your name"
+                        class="form-control mt-2"
+                        required="required"
+                        data-error="Name is required."
+                      />
+                      <div class="help-block with-errors"></div>
+                    </div>
                   </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <label for="email">Email</label>
-                    <input
-                      type="email"
-                      name="email"
-                      id="email"
-                      placeholder="Your email"
-                      class="form-control mt-2"
-                      required
-                    />
+                  <div class="col-lg-6">
+                    <div class="form-group">
+                      <label for="contact_email">Email</label>
+                      <input
+                        type="email"
+                        name="email"
+                        id="contact_email"
+                        placeholder="Your email"
+                        class="form-control mt-2"
+                        required="required"
+                        data-error="Email is required."
+                      />
+                      <div class="help-block with-errors"></div>
+                    </div>
                   </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <label for="tel">Phone Number</label>
-                    <input
-                      id="tel"
-                      name="tel"
-                      type="tel"
-                      placeholder="Phone"
-                      class="form-control mt-2"
-                      required
-                    />
+                  <div class="col-lg-6">
+                    <div class="form-group">
+                      <label for="contact_tel">Phone Number</label>
+                      <input
+                        id="contact_tel"
+                        name="tel"
+                        type="tel"
+                        placeholder="Phone"
+                        class="form-control mt-2"
+                        required="required"
+                        data-error="Phone is required."
+                      />
+                      <div class="help-block with-errors"></div>
+                    </div>
                   </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <label for="subject">Subject</label>
-                    <input
-                      type="text"
-                      name="subject"
-                      id="subject"
-                      placeholder="Subject"
-                      class="form-control mt-2"
-                    />
+                  <div class="col-lg-6">
+                    <div class="form-group">
+                      <label for="contact_subject">Subject</label>
+                      <input
+                        type="text"
+                        name="subject"
+                        id="contact_subject"
+                        placeholder="Subject"
+                        class="form-control mt-2"
+                      />
+                    </div>
                   </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea
-                      name="message"
-                      id="message"
-                      placeholder="Additional Message (Optional)"
-                      class="form-control mt-2"
-                      rows="3"
-                    ></textarea>
+                  <div class="col-12">
+                    <div class="form-group">
+                      <label for="message">Message</label>
+                      <textarea
+                        name="message"
+                        id="message"
+                        placeholder="Additional Message (Optional)"
+                        class="form-control mt-2"
+                        rows="3"
+                      ></textarea>
+                    </div>
                   </div>
-                </div>
-                <div class="col-12 mt-3">
-                  <input type="submit" value="Send" class="form-control" />
+                  <div class="col-12 mt-3">
+                    <input type="submit" value="Send" class="form-control" />
+                  </div>
                 </div>
               </div>
             </form>
@@ -368,19 +388,26 @@
 
     <!-- SCRIPTS GO HERE -->
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"
+      integrity="sha256-dHf/YjH1A4tewEsKUSmNnV05DDbfGN3g7NMq86xgGh8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="contact.js"></script>
   </body>
 </html>
