--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg main-nav fixed-top navbar-light">
-      <a class="navbar-brand" href="index"
+      <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
           src="resources/imgs/logo_alt.png"
@@ -38,7 +38,9 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="tel:1-615-278-9450">(615) 278-9450</a>
+          <a class="nav-link" href="tel:1-615-278-9450"
+            ><strong>(615) 278-9450</strong></a
+          >
         </li>
       </ul>
 
@@ -67,6 +69,9 @@
           </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="about">About</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item px-2">
             <a
@@ -296,18 +301,18 @@
     <!-- SCRIPTS GO HERE -->
 
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
     <script
@@ -315,6 +320,7 @@
       integrity="sha256-dHf/YjH1A4tewEsKUSmNnV05DDbfGN3g7NMq86xgGh8="
       crossorigin="anonymous"
     ></script>
-    <script src="/resources/js/contact.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="contact.js"></script>
   </body>
 </html>
