major work-in-progress including JS animations and major style changes

--- a/about.html
+++ b/about.html
@@ -12,27 +12,36 @@
       name="keywords"
       content="air charter,cargo service,Tennessee air charter,AOG,JIT,shipping"
     />
-<<<<<<< HEAD
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/resources/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/resources/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/resources/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/resources/favicons/site.webmanifest" />
     <title>Resource Air Charter | About</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap"
+      href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-=======
-        <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicons/favicon-16x16.png">
-        <link rel="manifest" href="/resources/favicons/site.webmanifest">
-    <title>Resource Air Charter | About</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap" rel="stylesheet">
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="resources/css/style2.css" type="text/css" />
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
     <script src="https://kit.fontawesome.com/c3ee91c358.js"></script>
   </head>
 
@@ -52,7 +61,6 @@
           >
         </li>
       </ul>
-
       <button
         class="navbar-toggler"
         type="button"
@@ -64,7 +72,6 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item px-2">
@@ -83,11 +90,7 @@
             <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item px-2">
-            <a
-              class="text-white nav-link btn btn-primary"
-              href="tel:1-615-278-9450"
-              >Call Now</a
-            >
+            <a class="btn btn-primary" href="tel:1-615-278-9450">Call Now</a>
           </li>
         </ul>
       </div>
@@ -145,19 +148,9 @@
               alt="Andy Downs"
               class="gallery"
             />
-<<<<<<< HEAD
-          </div>
-          <div class="col-lg-6 text-center">
             <h3>Andy Downs</h3>
             <h4 class="sub-head">Founder</h4>
           </div>
-        </div>
-        <div class="row align-items-center justify-content-between my-3">
-=======
-            <h3>Andy Downs</h3>
-            <h4 class="sub-head">Founder</h4>
-          </div>
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
           <div class="col-lg-6 portrait text-center my-3">
             <img
               src="resources/imgs/James-300_250-300x250.jpg"
@@ -165,15 +158,10 @@
               class="gallery"
             />
             <h3>James Matthews</h3>
-<<<<<<< HEAD
-            <h4 class="sub-head">Managing Partner</h4>
-          </div>
-=======
             <h4 class="sub-head">Partner</h4>
           </div>
         </div>
         <div class="row align-items-center justify-content-between my-3">
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
           <div class="col-lg-6 portrait text-center">
             <img
               src="resources/imgs/tom_murphy.JPG"
@@ -211,8 +199,7 @@
       <div class="container">
         <h2>How Can We Help?</h2>
         <div class="row">
-<<<<<<< HEAD
-          <div class="col-lg-6">
+          <div class="col-lg-12">
             <form
               id="contact-form"
               method="POST"
@@ -220,17 +207,12 @@
               role="form"
               class="border rounded p-4"
             >
-=======
-          <div class="col-lg-12">
-            <form id="contact-form" method="POST" action="contact.php" role="form" class="border rounded p-4">
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
               <div class="messages"></div>
               <div class="controls">
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label for="contact_name">Name</label>
-<<<<<<< HEAD
                       <input
                         type="text"
                         name="name"
@@ -240,17 +222,12 @@
                         required="required"
                         data-error="Name is required."
                       />
-=======
-                      <input type="text" name="name" id="contact_name" placeholder="Your name" class="form-control mt-2"
-                        required="required" data-error="Name is required." />
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
                       <div class="help-block with-errors"></div>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label for="contact_email">Email</label>
-<<<<<<< HEAD
                       <input
                         type="email"
                         name="email"
@@ -260,17 +237,12 @@
                         required="required"
                         data-error="Email is required."
                       />
-=======
-                      <input type="email" name="email" id="contact_email" placeholder="Your email"
-                        class="form-control mt-2" required="required" data-error="Email is required." />
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
                       <div class="help-block with-errors"></div>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label for="contact_tel">Phone Number</label>
-<<<<<<< HEAD
                       <input
                         id="contact_tel"
                         name="tel"
@@ -280,17 +252,12 @@
                         required="required"
                         data-error="Phone is required."
                       />
-=======
-                      <input id="contact_tel" name="tel" type="tel" placeholder="Phone" class="form-control mt-2"
-                        required="required" data-error="Phone is required." />
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
                       <div class="help-block with-errors"></div>
                     </div>
                   </div>
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label for="contact_subject">Subject</label>
-<<<<<<< HEAD
                       <input
                         type="text"
                         name="subject"
@@ -298,16 +265,11 @@
                         placeholder="Subject"
                         class="form-control mt-2"
                       />
-=======
-                      <input type="text" name="subject" id="contact_subject" placeholder="Subject"
-                        class="form-control mt-2" />
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
                     </div>
                   </div>
                   <div class="col-12">
                     <div class="form-group">
                       <label for="message">Message</label>
-<<<<<<< HEAD
                       <textarea
                         name="message"
                         id="message"
@@ -315,10 +277,6 @@
                         class="form-control mt-2"
                         rows="3"
                       ></textarea>
-=======
-                      <textarea name="message" id="message" placeholder="Additional Message (Optional)"
-                        class="form-control mt-2" rows="3"></textarea>
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
                     </div>
                   </div>
                   <div class="col-12 mt-3">
@@ -328,20 +286,6 @@
               </div>
             </form>
           </div>
-<<<<<<< HEAD
-          <div class="col-lg-6 d-none d-lg-block">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6605.375278046151!2d-86.51400785903542!3d36.01408334690711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88640dc2e550ce3b%3A0xa4c1f148c99657f1!2s691+Fitzhugh+Blvd%2C+Smyrna%2C+TN+37167!5e0!3m2!1sen!2sus!4v1565195522311!5m2!1sen!2sus"
-              width="500"
-              height="470"
-              frameborder="0"
-              style="border:0"
-              class="rounded shadow"
-              allowfullscreen
-            ></iframe>
-          </div>
-=======
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
         </div>
       </div>
     </section>
