--- a/contact.html
+++ b/contact.html
@@ -12,27 +12,36 @@
       name="keywords"
       content="air charter,cargo service,Tennessee air charter,AOG,JIT,shipping"
     />
-<<<<<<< HEAD
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/resources/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/resources/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/resources/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/resources/favicons/site.webmanifest" />
     <title>Resource Air Charter | Contact</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap"
+      href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-=======
-        <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicons/favicon-16x16.png">
-        <link rel="manifest" href="/resources/favicons/site.webmanifest">
-    <title>Resource Air Charter | Contact</title>
-<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap" rel="stylesheet">
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="resources/css/style2.css" type="text/css" />
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
     <script src="https://kit.fontawesome.com/c3ee91c358.js"></script>
   </head>
 
@@ -52,7 +61,6 @@
           >
         </li>
       </ul>
-
       <button
         class="navbar-toggler"
         type="button"
@@ -64,7 +72,6 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item px-2">
@@ -83,11 +90,7 @@
             <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item px-2">
-            <a
-              class="text-white nav-link btn btn-primary"
-              href="tel:1-615-278-9450"
-              >Call Now</a
-            >
+            <a class="btn btn-primary" href="tel:1-615-278-9450">Call Now</a>
           </li>
         </ul>
       </div>
@@ -99,11 +102,7 @@
           <h1 class="display-4 h1-contact text-white">Call us today</h1>
           <hr class="my-4 emphasis" />
           <p class="lead">
-<<<<<<< HEAD
-            Call us 24/7 to speak with Mission Control at our home office in
-=======
             Call us 24/7 to speak with Flight Operations at our home office in
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
             Smyrna, TN.
           </p>
         </div>
@@ -116,21 +115,16 @@
     <section class="section-information my-5 py-5">
       <div class="container">
         <h2>How can we help?</h2>
-<<<<<<< HEAD
-        <p class="">
-          Have a question about long-term air cargo needs? Curious about how our
-          facilities operate? Just want to say hi? Fill out the form below and
-          we'll get back to you within 1 business day.
-        </p>
-        <p class="">
-=======
         <p>
           Have a question about long-term air cargo needs? Curious about how our
-          facilities operate? Just want to connect? Fill out the form below or send us an email at <a href="mailto:dispatch@resourceaircharter.com"> dispatch@resourceaircharter.com </a> and
-          we'll get back to you within 1 business day.
+          facilities operate? Just want to connect? Fill out the form below or
+          send us an email at
+          <a href="mailto:dispatch@resourceaircharter.com">
+            dispatch@resourceaircharter.com
+          </a>
+          and we'll get back to you within 1 business day.
         </p>
         <p>
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
           <span>DO NOT</span> use this form for urgent shipping needs! If you
           have an urgent charter or mission request, call us 24/7 at our Mission
           Control Center <a href="tel:1-615-278-9450">(615) 278-9450</a> to
