--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,27 +12,36 @@
       name="keywords"
       content="air charter,cargo service,Tennessee air charter,AOG,JIT,shipping"
     />
-<<<<<<< HEAD
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/resources/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/resources/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/resources/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/resources/favicons/site.webmanifest" />
     <title>Resource Air Charter | Privacy Policy</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap"
+      href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-=======
-        <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicons/favicon-16x16.png">
-        <link rel="manifest" href="/resources/favicons/site.webmanifest">
-    <title>Resource Air Charter | Privacy Policy</title>
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap" rel="stylesheet">
->>>>>>> 33667fac31c3ef3c74ab2ff40b4445b8bbe4769c
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="resources/css/style2.css" type="text/css" />
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
     <script src="https://kit.fontawesome.com/c3ee91c358.js"></script>
   </head>
 
@@ -52,7 +61,6 @@
           >
         </li>
       </ul>
-
       <button
         class="navbar-toggler"
         type="button"
@@ -64,7 +72,6 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item px-2">
@@ -83,11 +90,7 @@
             <a class="nav-link" href="contact">Contact</a>
           </li>
           <li class="nav-item px-2">
-            <a
-              class="text-white nav-link btn btn-primary"
-              href="tel:1-615-278-9450"
-              >Call Now</a
-            >
+            <a class="btn btn-primary" href="tel:1-615-278-9450">Call Now</a>
           </li>
         </ul>
       </div>
