major update and file cleanup/reorganization

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
       <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
-          src="resources/imgs/logo_alt.png"
+          src="resources/imgs/logo.jpg"
           alt="Resource Air Charter Logo"
       /></a>
 
@@ -113,6 +113,21 @@
       </div>
     </section>
 
+    <div class="card bg-gray mb-5 py-4 text-center shadow">
+      <div class="container">
+        <div class="card-body">
+          <h3 class="pb-3">Your Air Cargo and Conversion Partner</h3>
+          <div class="row justify-content-center">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+              beatae vero dignissimos eius nam rem ut assumenda explicabo dolore
+              itaque!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <section id="section-story" class="my-5 py-5">
       <div class="container">
         <h2>Our Story</h2>
@@ -150,15 +165,21 @@
             />
             <h3>Andy Downs</h3>
             <h4 class="sub-head">Founder</h4>
+            <a href="https://www.linkedin.com/company/resource-air-charter">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
           </div>
           <div class="col-lg-6 portrait text-center my-3">
             <img
-              src="resources/imgs/James-300_250-300x250.jpg"
+              src="resources/imgs/james_matthews.jpg"
               alt="James Matthews"
               class="gallery"
             />
             <h3>James Matthews</h3>
             <h4 class="sub-head">Partner</h4>
+            <a href="https://www.linkedin.com/company/resource-air-charter">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
           </div>
         </div>
         <div class="row align-items-center justify-content-between my-3">
@@ -170,6 +191,9 @@
             />
             <h3>Tom Murphy</h3>
             <h4 class="sub-head">Director of Maintenance</h4>
+            <a href="https://www.linkedin.com/company/resource-air-charter">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
           </div>
           <div class="col-lg-6 portrait text-center my-3">
             <img
@@ -179,6 +203,9 @@
             />
             <h3>Judd Cowan</h3>
             <h4 class="sub-head">Chief Engineer</h4>
+            <a href="https://www.linkedin.com/company/resource-air-charter">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
           </div>
           <div class="col-lg-6 portrait text-center">
             <img
@@ -188,6 +215,9 @@
             />
             <h3>Christina England</h3>
             <h4 class="sub-head">Chief of Flight Operations</h4>
+            <a href="https://www.linkedin.com/company/resource-air-charter">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -407,6 +437,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="contact.js"></script>
+    <script src="/resources/js/contact.js"></script>
   </body>
 </html>
