--- a/careers.html
+++ b/careers.html
@@ -50,7 +50,7 @@
       <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
-          src="resources/imgs/logo_alt.png"
+          src="resources/imgs/logo.jpg"
           alt="Resource Air Charter Logo"
       /></a>
 
@@ -360,6 +360,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="contact.js"></script>
+    <script src="/resources/js/contact.js"></script>
   </body>
 </html>
