--- a/cargo-services.html
+++ b/cargo-services.html
@@ -50,7 +50,7 @@
       <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
-          src="resources/imgs/logo_alt.png"
+          src="resources/imgs/logo.jpg"
           alt="Resource Air Charter Logo"
       /></a>
 
@@ -306,7 +306,7 @@
           </div>
           <div class="col-lg-6 text-center">
             <img
-              src="resources/imgs/247.jpg"
+              src="resources/imgs/plane_loading.jpg"
               alt="plane pulling in for loading"
               class="gallery rounded shadow"
             />
@@ -320,7 +320,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-6 text-center">
             <img
-              src="resources/imgs/loading.jpg"
+              src="resources/imgs/loading_cargo.jpg"
               alt="men loading cargo on plane"
               class="gallery rounded shadow"
             />
@@ -597,8 +597,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="quoteform.js"></script>
-    <script src="carousel.js"></script>
-    <script src="contact.js"></script>
+    <script src="/resources/js/quoteform.js"></script>
+    <script src="/resources/js/carousel.js"></script>
+    <script src="/resources/js/contact.js"></script>
   </body>
 </html>
