--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -50,7 +50,7 @@
       <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
-          src="resources/imgs/logo_alt.png"
+          src="resources/imgs/logo.jpg"
           alt="Resource Air Charter Logo"
       /></a>
 
