--- a/special-missions.html
+++ b/special-missions.html
@@ -50,7 +50,7 @@
       <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
-          src="resources/imgs/logo_alt.png"
+          src="resources/imgs/logo.jpg"
           alt="Resource Air Charter Logo"
       /></a>
 
@@ -216,7 +216,7 @@
           </div>
           <div class="col-lg-4">
             <img
-              src="resources/imgs/puerto_rico_2.jpg"
+              src="resources/imgs/puerto_rico.jpg"
               alt="unloading supplies in Puerto Rico"
               class="gallery justify-content-center rounded shadow"
             />
@@ -507,7 +507,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="quoteform.js"></script>
-    <script src="contact.js"></script>
+    <script src="/resources/js/quoteform.js"></script>
+    <script src="/resources/js/contact.js"></script>
   </body>
 </html>
