--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <a class="navbar-brand" href="/"
         ><img
           class="navbar-logo"
-          src="resources/imgs/logo_alt.png"
+          src="resources/imgs/logo.jpg"
           alt="Resource Air Charter Logo"
       /></a>
 
@@ -604,7 +604,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="quoteform.js"></script>
-    <script src="contact.js"></script>
+    <script src="/resources/js/quoteform.js"></script>
+    <script src="/resources/js/contact.js"></script>
   </body>
 </html>
